--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 title: Hassan Mortada
 description: Hassan Mortada's personal page.
 keywords: signal processing, image processing, Ph.D.
-baseurl:  /hassanmortada.github.io # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
-url: https://hassanmortada.github.io/hassanmortada.github.io  # url should be 'http://<github_username>.github.io/homepage' as before
+baseurl:  /personal # if you have suburl as homepage like '/homepage', please change it to '/homepage' and your repo's name should be 'homepage'
+url: https://hassanmortada.github.io/personal  # url should be 'http://<github_username>.github.io/homepage' as before
 # url: http://127.0.0.1:4000
-img_path: /hassanmortada.github.io/static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
+img_path: /personal/static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
 
 # author -- index page "about me" section
 author:  # change following line to your infomation.
