--- a/_data/index/links.yml
+++ b/_data/index/links.yml
@@ -1,18 +1,12 @@
 # links section data
-- last_name: Name 1
+- last_name: DSIM
   first_name:
-  desc: CEO
-  website: https://www.google.com
-  email: ceo@google.com
+  desc: research project
+  website: http://dsim.unistra.fr/
+  email:
 
-- last_name: Donate
-  first_name: Jalpc
-  desc: Support Jalpc
-  website: http://www.jarrekk.com/donate/
-  email: me@jarrekk.com
-
-- last_name: LN
-  first_name: FN
-  desc: COO
-  website: https://github.com
-  email: coo@google.com
+- last_name: Jalpc
+  first_name:
+  desc: This page theme
+  website: https://github.com/jarrekk/Jalpc
+  email:
